# openvino_vision

./: CMakeLists.txt  README.md  package.xml
include/openvino_vision/: openvino_vision.hpp
launch/: openvino_vision_launch.py
model/11/: metadata.yaml
model/8/: best.xml
python_test_code/model/11/: best.xml
python_test_code/model/8/: metadata.yaml
python_test_code/src/: openvino_test.py
src/: openvino_vision.cpp
