<?xml version="1.0"?>
<package format="3">
  <name>openvino_vision</name>
  <version>0.1.0</version>
  <description>ROS2 노드에서 OpenVINO inference를 수행하는 패키지</description>
  <maintainer email="leokim0503@naver.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
